--- a/index.html
+++ b/index.html
@@ -59,24 +59,24 @@
 
 
     <section>
-        <h1></h1>
+        <h1>News</h1>
         <section>
             <article>
-                <h1></h1>
+                <img src="" alt="">
                 <h3></h3>
                 <span></span>
                 <p></p>
             </article>
 
             <article>
-                <h1></h1>
+                <img src="" alt="">
                 <h3></h3>
                 <span></span>
                 <p></p>
             </article>
 
             <article>
-                <h1></h1>
+                <img src="" alt="">
                 <h3></h3>
                 <span></span>
                 <p></p>
