--- a/index.html
+++ b/index.html
@@ -57,15 +57,26 @@
     </main>
 
 
+    
+Community Tales #15 | 22 Apr 2025
+Greetings warriors of Calradia!
+Before we dive into this edition of
+#CommunityTales, we would like to
+invite you to the next...
+
 
     <section>
         <h1>News</h1>
         <section>
             <article>
                 <img src="" alt="">
-                <h3></h3>
-                <span></span>
-                <p></p>
+                <h3>Community Tales #15</h3>
+                <span>Community Tales #15 | 22 Apr 2025</span>
+                <p>Greetings warriors of Calradia!
+                    Before we dive into this edition of
+                    #CommunityTales, we would like to
+                    invite you to the next...
+                </p>
             </article>
 
             <article>
