add tag section

--- a/index.html
+++ b/index.html
@@ -37,99 +37,100 @@
         </section>
     </main>
 
-
-    
-Community Tales #15 | 22 Apr 2025
-Greetings warriors of Calradia!
-Before we dive into this edition of
-#CommunityTales, we would like to
-invite you to the next...
-
-
     <section>
-        <h1>News</h1>
+
         <section>
-            <article>
-                <img src="" alt="">
-                <h3>Community Tales #15</h3>
-                <span>Community Tales #15 | 22 Apr 2025</span>
-                <p>Greetings warriors of Calradia!
-                    Before we dive into this edition of
-                    #CommunityTales, we would like to
-                    invite you to the next...
-                </p>
-            </article>
+            <h1>News</h1>
+            <section>
+                <article>
+                    <img src="assets/images/CommunityTales12FW.png" alt="Community Tales #15">
+                    <h3>Community Tales #15</h3>
+                    <span>Community Tales #15 | 22 Apr 2025</span>
+                    <p>Greetings warriors of Calradia!
+                        Before we dive into this edition of
+                        #CommunityTales, we would like to
+                        invite you to the next...
+                    </p>
+                </article>
 
-            <article>
-                <img src="" alt="">
-                <h3></h3>
-                <span></span>
-                <p></p>
-            </article>
+                <article>
+                    <img src="" alt="">
+                    <h3>Announcing the War Sails Expansion & Base Game Plans!</h3>
+                    <span>Announcing the War Sails Expansion & Base Game Plans! | 20 Mar 2025</span>
+                    <p>Greetings warriors of Calradia! We're
+                        thrilled to announce a major expansion
+                        to Mount & Blade II: Bannerlord. War
+                        Sails will be arriving on PC and...
+                    </p>
+                </article>
 
-            <article>
-                <img src="" alt="">
-                <h3></h3>
-                <span></span>
-                <p></p>
-            </article>
+                <article>
+                    <img src="" alt="">
+                    <h3></h3>
+                    <span></span>
+                    <p></p>
+                </article>
 
-            <article>
-                <h1></h1>
-                <h3></h3>
-                <span></span>
-                <p></p>
-            </article>
+                <article>
+                    <h1></h1>
+                    <h3></h3>
+                    <span></span>
+                    <p></p>
+                </article>
 
-            <article>
-                <h1></h1>
-                <h3></h3>
-                <span></span>
-                <p></p>
-            </article>
+                <article>
+                    <h1></h1>
+                    <h3></h3>
+                    <span></span>
+                    <p></p>
+                </article>
 
-            <article>
-                <h1></h1>
-                <h3></h3>
-                <span></span>
-                <p></p>
-            </article>
+                <article>
+                    <h1></h1>
+                    <h3></h3>
+                    <span></span>
+                    <p></p>
+                </article>
 
-            <article>
-                <h1></h1>
-                <h3></h3>
-                <span></span>
-                <p></p>
-            </article>
+                <article>
+                    <h1></h1>
+                    <h3></h3>
+                    <span></span>
+                    <p></p>
+                </article>
 
+            </section>
+
+
+            <a href=""></a>
         </section>
 
+        <section>
+            <h2></h2>
+            <article>
+                <h4></h4>
+                <span></span>
+                <p></p>
+            </article>
 
-        <a href=""></a>
+            <article>
+                <h4></h4>
+                <span></span>
+                <p></p>
+            </article>
+
+            <article>
+                <h4></h4>
+                <span></span>
+                <p></p>
+            </article>  
+
+            <a href=""></a>
+        </section>
+        
     </section>
 
-    <section>
-        <h2></h2>
-        <article>
-            <h4></h4>
-            <span></span>
-            <p></p>
-        </article>
 
-        <article>
-            <h4></h4>
-            <span></span>
-            <p></p>
-        </article>
-
-        <article>
-            <h4></h4>
-            <span></span>
-            <p></p>
-        </article>  
-
-        <a href=""></a>
-    </section>
 
     <section>
         <h2></h2>
